adding wip disabled home page until logged in

--- a/front/src/styles/_header.scss
+++ b/front/src/styles/_header.scss
@@ -52,6 +52,11 @@
 
   &__user {
     margin-left: auto;
+    text-decoration: none;
+
+    &.DISABLED {
+      pointer-events: none;
+    }
 
     &-name {
       @include overflow-text-hide;
@@ -64,6 +69,10 @@
       fill: $color-fore;
       margin: $margin-default 0;
       width: $unit-default * 2;
+
+      &.DISABLED {
+        fill: $color-grey;
+      }
     }
   }
 
@@ -77,21 +86,28 @@
         margin: $margin-default 0;
         padding: $padding-default;
         text-transform: uppercase;
+        color: $color-bg;
         background-color: $color-mid;
         border-radius: $border-radius;
         border: $border-size solid $color-bg;
         transition: $transition-default * 0.5;
-        color: rgba($color-fore, $color-alpha);
-        -webkit-text-fill-color: rgba($color-fore, $color-alpha);
 
         &.ACTIVE {
           z-index: 1;
           outline: none;
           transform: scaleY(1.1);
           background-color: $color-success;
-          color: rgba($color-shadow, $color-alpha);
           border: $border-size solid $color-success;
-          -webkit-text-fill-color: rgba($color-shadow, 1);
+        }
+
+        &.DISABLED {
+          opacity: 1;
+          color: $color-bg;
+
+          p,
+          span {
+            opacity: $color-alpha;
+          }
         }
       }
 
