--- a/front/src/styles/_header.scss
+++ b/front/src/styles/_header.scss
@@ -6,6 +6,7 @@
     align-items: center;
 
     &-name {
+      margin-left: 0;
       font-size: $font-size-lg;
       @include overflow-text-hide;
 
