--- a/front/src/styles/_header.scss
+++ b/front/src/styles/_header.scss
@@ -1,3 +1,9 @@
+.show-settings {
+  .task__project__header__info {
+    margin-right: 0;
+  }
+}
+
 .task__project__header {
   max-width: 100%;
 
@@ -5,6 +11,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-right: $unit-default * 2.66;
 
     &-name {
       margin-left: 0;
