card css bugfix

--- a/front/src/styles/_card.scss
+++ b/front/src/styles/_card.scss
@@ -8,16 +8,15 @@
 .card,
 .container {
   max-width: 95vw;
-  width: $unit-default * 40;
   min-height: $unit-default * 2;
   margin: $unit-default auto;
   padding: $unit-default * 0.5;
 
   @include screen-md {
-    width: $unit-default * 25;
+    max-width: $unit-default * 25;
   }
   @include screen-lg {
-    width: $unit-default * 25;
+    max-width: $unit-default * 25;
   }
 
   &__footer {
@@ -26,7 +25,7 @@
 
   @each $size, $value in $max-sizes {
     &.#{$size} {
-      width: $value;
+      max-width: $value;
     }
   }
 }
