--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -59,33 +59,6 @@ body {
       right: 0;
       max-width: $unit-default * 15;
       min-width: $unit-default * 15;
-      min-height: $unit-default * 5;
-
-      ul {
-        margin-right: $unit-default * 2;
-      }
-
-      .button {
-        cursor: pointer;
-      }
-
-      a,
-      p,
-      li,
-      .button {
-        display: block;
-        margin: 0;
-        padding: 0;
-        padding-bottom: $margin-default * 0.5;
-        margin-bottom: $margin-default * 0.5;
-        color: $color-bg;
-        font-weight: bolder;
-        text-decoration: none;
-      }
-
-      li {
-        border-bottom: solid $border-size rgba($color-bg, $color-alpha);
-      }
 
       @mixin screen-float {
         position: relative;
@@ -108,6 +81,39 @@ body {
 
       @include screen-md {
         @include screen-float;
+      }
+
+      ul {
+        margin-right: $unit-default * 2;
+      }
+
+      .button {
+        cursor: pointer;
+      }
+
+      a,
+      p,
+      li,
+      .button {
+        display: block;
+        margin: 0;
+        padding: $margin-default * 0.33 0;
+        margin-bottom: $margin-default * 0.5;
+        color: $color-bg;
+        font-weight: bolder;
+        text-decoration: none;
+      }
+
+      li {
+        border-bottom: solid $border-size rgba($color-bg, $color-alpha);
+      }
+
+      ul {
+        a,
+        p,
+        button {
+          margin-left: $margin-default;
+        }
       }
     }
   }
