--- a/front/src/styles/_header.scss
+++ b/front/src/styles/_header.scss
@@ -110,6 +110,7 @@
         padding: $padding-default;
         text-transform: uppercase;
         color: rgba($color-fore, $color-alpha);
+        -webkit-text-fill-color: rgba($color-fore, $color-alpha);
         background-color: $color-mid;
         border-radius: $border-radius;
         border: $border-size solid $color-bg;
@@ -120,18 +121,20 @@
           outline: none;
           transform: scaleY(1.1);
           color: $color-bg;
+          -webkit-text-fill-color: $color-bg;
           background-color: $color-success;
           border: $border-size solid $color-success;
         }
 
         &.DISABLED {
           opacity: 1;
-          color: $color-bg;
+          color: rgba($color-bg, $color-alpha);
+          -webkit-text-fill-color: rgba($color-bg, $color-alpha);
 
-          p,
-          span {
-            opacity: $color-alpha;
-          }
+          //p,
+          //span {
+          //  opacity: $color-alpha;
+          //}
         }
       }
 
