--- a/front/src/styles/_statusBar.scss
+++ b/front/src/styles/_statusBar.scss
@@ -10,6 +10,11 @@
   background-color: transparent;
   transition: background-color 0.6s, right 0.6s, height 1s;
 
+  &.top {
+    top: $margin-default * -2.2;
+    left: $margin-default * -1.5;
+  }
+
   @each $status, $value in $all-status-colours {
     &.#{to-upper-case($status)} {
       right: $offPos;
@@ -25,6 +30,10 @@
       }
       @include screen-md {
         height: $unit-default * 0.85;
+      }
+
+      &.top {
+        right: $margin-default * -1.5;
       }
     }
   }
