--- a/front/src/styles/_statusBar.scss
+++ b/front/src/styles/_statusBar.scss
@@ -34,6 +34,19 @@
 
       &.top {
         right: $margin-default * -1.5;
+
+        @include screen-xs {
+          top: $margin-default * -1.5;
+        }
+        @include screen-sm {
+          top: $margin-default * -1.5;
+        }
+        @include screen-md {
+          top: $margin-default * -1.5;
+        }
+        @include screen-lg {
+          top: $margin-default * -1.75;
+        }
       }
     }
   }
