--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -26,8 +26,8 @@ body {
 
     &__btn {
       position: absolute;
-      top: 2px;
-      right: 2px;
+      top: 7px;
+      right: 5px;
       z-index: 5;
       margin: 0;
       padding: 0;
@@ -99,7 +99,7 @@ body {
         display: block;
         margin: 0;
         padding: $margin-default * 0.33 0;
-        margin-bottom: $margin-default * 0.5;
+        margin-bottom: $margin-default * 0.9;
         color: $color-bg;
         -webkit-text-fill-color: $color-bg;
         font-weight: bolder;
@@ -108,6 +108,12 @@ body {
 
       li {
         border-bottom: solid $border-size rgba($color-bg, $color-alpha);
+
+        &:last-of-type {
+          margin-bottom: 0;
+          padding-bottom: 0;
+          border-bottom: unset;
+        }
       }
 
       ul {
