disable lost password link if anon account

--- a/front/src/styles/_controls.scss
+++ b/front/src/styles/_controls.scss
@@ -8,6 +8,11 @@ a {
       -webkit-text-fill-color: $color-select;
     }
   }
+
+  &.DISABLED {
+    opacity: $color-alpha;
+    pointer-events: none;
+  }
 }
 
 label {
