--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -180,6 +180,24 @@ body {
   }
 
   &__footer {
+    color: $color-fore;
+    -webkit-text-fill-color: $color-fore;
     padding-top: $unit-default * 5;
+
+    &__content {
+      position: relative;
+
+      & > * {
+        margin: 0;
+        color: $color-fore;
+        fill: $color-fore;
+      }
+
+      &-version {
+        position: absolute;
+        bottom: 0;
+        right: $margin-default;
+      }
+    }
   }
 }
