wip settings update for tasks and projects

--- a/front/src/styles/_controls.scss
+++ b/front/src/styles/_controls.scss
@@ -32,6 +32,12 @@ label {
   span {
     display: none;
   }
+
+  &.show-label {
+    span {
+      display: inline-block;
+    }
+  }
 }
 
 // INPUTS && CONTROLS TO BE SEPARATED //
