--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -114,6 +114,10 @@ body {
           padding-bottom: 0;
           border-bottom: unset;
         }
+
+        &.label {
+          border-bottom: unset;
+        }
       }
 
       ul {
