--- a/front/src/styles/_defaults.scss
+++ b/front/src/styles/_defaults.scss
@@ -142,6 +142,10 @@ body {
   @extend .hide-xxl;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
 .min-half {
   min-width: 50%;
 }
@@ -264,6 +268,10 @@ body {
   align-items: center;
 }
 
+.align-middle {
+  vertical-align: middle;
+}
+
 .display-inline {
   display: inline;
 }
@@ -283,7 +291,9 @@ body {
   width: 1px;
 }
 
-
+.alpha {
+  opacity: $color-alpha;
+}
 
 @each $color, $value in $all-colours {
   .stroke-#{$color} {
