--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -31,12 +31,13 @@ body {
     position: relative;
 
     &__btn {
+      margin: 0;
+      padding: 0;
+      cursor: pointer;
       position: absolute;
       top: 3px;
       right: 5px;
       z-index: 5;
-      margin: 0;
-      padding: 0;
 
       &.is-close:focus {
         border-color: transparent;
