--- a/front/src/styles/_defaults.scss
+++ b/front/src/styles/_defaults.scss
@@ -328,7 +328,7 @@ body {
   }
 }
 
-.fade {
+.anim-setup {
   animation-delay: 0s;
   animation-fill-mode: both;
   animation-duration: $transition-default * 0.5;
@@ -338,13 +338,13 @@ body {
 
 .anim-show {
   animation-name: anim_show;
-  @extend .fade;
+  @extend .anim-setup;
   @include delay_anims(20, 1, 0.15, 0);
 }
 
 .anim-show-fast {
   animation-name: anim_fade;
-  @extend .fade;
+  @extend .anim-setup;
   @include delay_anims(20, 1, 0.03, 0);
 }
 
