--- a/front/src/styles/_header.scss
+++ b/front/src/styles/_header.scss
@@ -128,11 +128,33 @@
           opacity: 1;
           color: rgba($color-bg, $color-alpha);
           -webkit-text-fill-color: rgba($color-bg, $color-alpha);
+        }
 
-          //p,
-          //span {
-          //  opacity: $color-alpha;
-          //}
+        &.HIGHLIGHT {
+          fill: unset;
+          @extend .anim-setup;
+          transition: $transition-default;
+          z-index: 1;
+          outline: none;
+          animation-duration: 3s;
+          animation-timing-function: ease-in-out;
+          animation-iteration-count: infinite;
+          animation-name: anim_highlight;
+        }
+
+        @keyframes anim_highlight {
+          0%,
+          100% {
+            color: $color-fore;
+            -webkit-text-fill-color: $color-fore;
+            background-color: $color-mid;
+          }
+
+          10% {
+            color: $color-shadow;
+            -webkit-text-fill-color: $color-shadow;
+            background-color: $color-mid-waiting;
+          }
         }
       }
 
