--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -74,6 +74,7 @@ $color-bg: rgb(33, 62, 69);
 $color-shadow: rgb(54, 56, 46);
 //$color-mid: rgb(88, 110, 99);
 $color-mid: rgb(80, 107, 115);
+$color-mid-waiting: rgb(134, 143, 107);
 $color-waiting: rgb(189, 173, 99);
 $color-success: rgb(154, 212, 125);
 $color-error: rgb(212, 151, 125);
