added hover to checkbox in settings

--- a/front/src/styles/_defaults.scss
+++ b/front/src/styles/_defaults.scss
@@ -146,6 +146,14 @@ body {
   cursor: pointer;
 }
 
+.hover {
+  transition: transform $transition-default;
+
+  &:hover {
+    transform: scale($hover-scale);
+  }
+}
+
 .min-half {
   min-width: 50%;
 }
