--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -158,12 +158,15 @@ body {
         }
 
         &-arrow {
+          margin: 0;
+          padding: 0;
+          font-size: $unit-default * 1.33;
           text-align: center;
           position: absolute;
           top: 50%;
           left: 50%;
-          font-size: $unit-default * 0.5;
-          transform: translateX(-50%) translateY(-50%) scale(2.5);
+          transform-origin: center;
+          transform: translateX(-50%) translateY(-50%);
         }
       }
     }
