Add server message on user creataion success and handle token on front ui

--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -1,4 +1,11 @@
 html,
 body {
   background-color: $color-bg;
+  width: 100%;
+  min-width: 100%;
+}
+
+.columns {
+  margin-left: 0;
+  margin-right: 0;
 }
