--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -5,7 +5,21 @@ body {
   min-width: 100%;
 }
 
+#app {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .columns {
   margin-left: 0;
   margin-right: 0;
+}
+
+.columns.is-vtop {
+  align-items: flex-start;
+}
+
+.columns.is-vbottom {
+  align-items: flex-end;
 }
