--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -23,3 +23,11 @@ body {
 .columns.is-vbottom {
   align-items: flex-end;
 }
+
+.flex-grow {
+  flex-grow: 1;
+}
+
+.flex-shrink {
+  flex-shrink: 1;
+}
