--- a/front2/src/sass/index.scss
+++ b/front2/src/sass/index.scss
@@ -7,6 +7,7 @@ $primary-invert: findColorInvert($primary);
 $twitter: #4099FF;
 $twitter-invert: findColorInvert($twitter);
 
+$color-transparent: rgba(0, 0, 0, 0);
 $color-alpha: 0.3;
 $color-grey: rgb(118, 130, 130);
 $color-bg: rgb(33, 62, 69);
@@ -22,6 +23,8 @@ $color-select: rgb(9, 161, 131);
 
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
 $colors: (
+  "transparent": ($color-transparent, $white),
+  "mid": ($color-mid, $white-ter),
   "white": ($white, $black),
   "black": ($black, $white),
   "light": ($light, $light-invert),
@@ -39,7 +42,18 @@ $link: $primary;
 $link-invert: $primary-invert;
 $link-focus-border: $primary;
 
+
+$radius-small: 2px !default
+$radius: 4px !default
+$radius-large: 6px !default
+
 // Import Bulma and Buefy styles
 @import "~bulma";
 @import "~buefy/src/scss/buefy";
 @import "style.scss";
+
+@each $color, $value in $colors {
+  .has-border-#{$color} {
+    border: 1px solid nth($value, 1);
+  }
+}
