--- a/front2/src/sass/index.scss
+++ b/front2/src/sass/index.scss
@@ -16,14 +16,16 @@ $color-shadow: rgb(54, 56, 46);
 $color-mid: rgb(80, 107, 115);
 $color-mid-waiting: rgb(134, 143, 107);
 $color-waiting: rgb(189, 173, 99);
-$color-success: rgb(154, 212, 125);
+//$color-success: rgb(154, 212, 125);
+$success: rgb(122, 231, 66);
 $color-error: rgb(212, 151, 125);
 $color-fore: rgb(234, 233, 218);
 $color-select: rgb(9, 161, 131);
 
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
 $colors: (
-  "transparent": ($color-transparent, $white),
+  "bg": ($color-bg, $light),
+  "transparent": ($color-transparent, $light),
   "mid": ($color-mid, $white-ter),
   "white": ($white, $black),
   "black": ($black, $white),
@@ -55,5 +57,9 @@ $radius-large: 6px !default
 @each $color, $value in $colors {
   .has-border-#{$color} {
     border: 1px solid nth($value, 1);
+  }
+
+  .fill-#{$color} {
+    fill: nth($value, 1);
   }
 }
