--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -100,6 +100,12 @@ body {
 }
 
 .row {
+  &.is-active & {
+    &__item {
+      border: 1px solid $white;
+    }
+  }
+
   &__content {
     &-button,
     &-progress {
