--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -134,6 +134,10 @@ body {
     }
   }
 
+  &__item {
+    //line-height: 1.3;
+  }
+
   .word-break {
     word-break: break-word;
   }
@@ -143,6 +147,7 @@ body {
     &-progress {
       margin: 0;
       padding: 0;
+      padding-top: 0.35rem;
       min-width: 2.7rem;
     }
 
@@ -158,7 +163,6 @@ body {
 
     &-progress {
       padding-left: 0.25rem;
-      padding-top: 0.35rem;
     }
 
     &-input {
