--- a/front2/src/sass/index.scss
+++ b/front2/src/sass/index.scss
@@ -19,7 +19,8 @@ $color-mid: rgb(80, 107, 115);
 $color-mid-waiting: rgb(134, 143, 107);
 $color-waiting: rgb(189, 173, 99);
 //$color-success: rgb(154, 212, 125);
-$success: rgb(122, 231, 66);
+//$success: rgb(122, 231, 66);
+$success: $primary;
 $color-error: rgb(212, 151, 125);
 $color-fore: rgb(234, 233, 218);
 $color-select: rgb(9, 161, 131);
