--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -5,6 +5,8 @@ body {
   min-width: 100%;
 }
 
+$array: (0, 1 ,2 ,3 ,4 ,5 ,6 ,7 ,8 ,9);
+
 $app-height: calc(100vh - 4rem);
 
 $footer-height: 2.5rem;
@@ -15,6 +17,20 @@ $footer-margin: 1.5rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: $app-height;
+}
+
+.icon {
+  &.is-small {
+    transform: scale(0.75);
+  }
+
+  &.is-medium {
+    transform: scale(1.25);
+  }
+
+  &.is-large {
+    transform: scale(1.5);
+  }
 }
 
 #footer {
@@ -31,16 +47,22 @@ $footer-margin: 1.5rem;
   background-color: $black;
 }
 
+@each $point in $array {
+  .z-index-#{$point} {
+    z-index: $point;
+  }
+
+  .p-#{$point} {
+    padding: $point * 0.25rem;
+  }
+
+  .m-#{$point} {
+    margin: $point * 0.25rem;
+  }
+}
+
 .color-alpha {
   opacity: 0.66;
-}
-
-.p-0 {
-  padding: 0;
-}
-
-.m-0 {
-  margin: 0;
 }
 
 .pad {
@@ -49,20 +71,6 @@ $footer-margin: 1.5rem;
 
 .v-align-center {
   vertical-align: middle;
-}
-
-.icon {
-  &.is-small {
-    transform: scale(0.75);
-  }
-
-  &.is-medium {
-    transform: scale(1.25);
-  }
-
-  &.is-large {
-    transform: scale(1.5);
-  }
 }
 
 .navbar {
@@ -133,25 +141,55 @@ $footer-margin: 1.5rem;
 }
 
 .select-bar {
+  margin-left: 0.3rem;
   margin-bottom: 0.3rem;
 
   button {
-    transition: $speed-slower;
-    padding: 0.1rem 0.3rem;
-    margin: 0.3rem;
+    outline: none;
+    border: none;
+    border-radius: 0;
+    position: relative;
+    margin: 0;
+    padding: 0;
     font-weight: bolder;
     text-transform: uppercase;
+    transition: $speed-slower;
+
+    &.extra-pad {
+      padding-left: 1.3rem;
+    }
+
+    .tri {
+      position: absolute;
+      z-index: -1;
+      right: -0.35rem;
+      transition: $speed-slower;
+    }
 
     span {
-      transform: scale(1.05);
+      transform: scale(1.05) translateX(0.23rem);
     }
+  }
+
+  button {
+    background-color: $light;
+    .tri { fill: $light; }
+  }
+
+  button.is-primary {
+    background-color: $primary;
+    .tri { fill: $primary; }
+  }
+
+  button[disabled] {
+    opacity: 1;
+    background-color: $grey-light;
+    .tri { fill: $grey-light; }
   }
 }
 
 .row {
-  &__item {
-    //line-height: 1.3;
-  }
+  &__item {}
 
   &.is-active & {
     &__item {
