--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -118,6 +118,14 @@ $app-pad-bottom: 1.5rem;
   &.is-center { justify-content: center; }
 }
 
+.flex-space-between {
+  justify-content: space-between;
+}
+
+.flex-space-around {
+  justify-content: space-around;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
