--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -249,7 +249,8 @@ $app-pad-bottom: 1.5rem;
 
       &.textarea {
         min-height: 1rem;
-        height: min-content;
+        height: inherit;
+        padding-right: 0.5rem;
       }
     }
   }
