--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -1,3 +1,5 @@
+@import "~bulma/sass/utilities/_all";
+
 html,
 body {
   background-color: $black;
@@ -76,6 +78,12 @@ $app-pad-bottom: 1.5rem;
 }
 
 .navbar {
+  .navbar-menu.is-active {
+    border-radius: $radius;
+    background-color: $light;
+    margin: 1rem 0.25rem;
+  }
+
   .navbar-item {
     padding: 0.5rem 0;
   }
@@ -84,6 +92,35 @@ $app-pad-bottom: 1.5rem;
     max-width: 70vw;
     max-height: 2.25rem;
     overflow: hidden;
+  }
+
+  .navmenu {
+    &__holder {
+      &__main {
+        margin: 0.3rem;
+        padding: 0.5rem 1rem;
+        display: none;
+        position: fixed;
+        top: 1rem;
+        right: 1rem;
+        z-index: 100;
+        min-width: 20rem;
+        min-height: 20rem;
+        border-radius: $radius;
+        color: $dark;
+        background-color: $light;
+
+        &.is-active {
+          display: block;
+        }
+
+        @include touch() {
+          top: 0;
+          left: 0;
+          right: 0;
+        }
+      }
+    }
   }
 }
 
@@ -156,7 +193,7 @@ $app-pad-bottom: 1.5rem;
 
   button {
     outline: none;
-    border: none;
+    //border: none;
     position: relative;
     margin: 0;
     padding: 0;
@@ -208,7 +245,7 @@ $app-pad-bottom: 1.5rem;
 
   &.is-active & {
     &__item {
-      border: 1px solid $light;
+      //border: 1px solid $light;
     }
   }
 
@@ -231,7 +268,7 @@ $app-pad-bottom: 1.5rem;
 
     &-button {
       min-width: 1.5rem;
-      border-color: transparent;
+      //border-color: transparent;
       background-color: transparent;
 
       svg {
@@ -244,7 +281,7 @@ $app-pad-bottom: 1.5rem;
     }
 
     &-input {
-      border-color: transparent;
+      //border-color: transparent;
       background-color: transparent;
 
       &.textarea {
