--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -80,7 +80,6 @@ $app-pad-bottom: 1.5rem;
 .navbar {
   $navbar-icon-width: 3rem;
   $navbar-btn-width: 3rem;
-  $navbar-btn-margin: 0.3rem;
 
   &-brand {
     width: 100%;
@@ -98,7 +97,7 @@ $app-pad-bottom: 1.5rem;
     flex-grow: 1;
     overflow: hidden;
     display: inline-block;
-    max-width: calc(100% - #{$navbar-btn-width} - #{$navbar-btn-margin} - #{$navbar-icon-width});
+    max-width: calc(100% - #{$navbar-btn-width} - #{$navbar-icon-width} + 0.5rem);
 
     &-title {
       overflow: hidden;
@@ -108,8 +107,9 @@ $app-pad-bottom: 1.5rem;
 
   &__btn {
     display: inline-block;
-    margin-right: $navbar-btn-margin;
-    margin-top: $navbar-btn-margin;
+    margin: 0;
+    padding: 0;
+    margin-top: 0.3rem;
     flex-grow: 0;
     width: $navbar-btn-width;
   }
