--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -120,7 +120,7 @@ $app-pad-bottom: 1.5rem;
     //overflow: hidden;
   }
 
-  &__holder {
+  &__options {
     margin: 0.3rem;
     padding: 0.5rem 1rem;
     display: none;
@@ -142,6 +142,24 @@ $app-pad-bottom: 1.5rem;
       top: 0;
       left: 0;
       right: 0;
+    }
+
+    .option {
+      position: relative;
+
+      .title {
+        float: left;
+        font-weight: bolder;
+        font-size: 1.5rem;
+
+        & + div {
+          position: relative;
+          right: 0;
+          width: 100%;
+          height: 1px;
+          border-bottom: 1px solid grey;
+        }
+      }
     }
   }
 
